<resources>
    <string name="app_name">FundamentalsKotlin</string>
    <string name="movies_text">Movies list</string>
    <string name="pg_text">+13</string>
    <string name="tag_text">Action, Adventure, Drama</string>
    <string name="back">Back</string>
    <string name="name">Avengers: End Game</string>
    <string name="reviews">125  REVIEWS</string>
    <string name="reviews_">\u0020 REVIEWS</string>
    <string name="storyline_name">Storyline</string>
    <string name="storylinetxt">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse
        Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor_movie1">Robert  Downey Jr.</string>
    <string name="actor_movie2">Chris  Evans</string>
    <string name="actor_movie3">Mark  Ruffalo</string>
    <string name="actor_movie4">Chris  Hemsworth</string>
    <string name="minute">137 min</string>
    <string name="min">\u0020 min</string>
    <string name="hw2">Homework #2 - нажми меня</string>
    <string name="fragment_movies_empty_text">There are no actors right now</string>
    <string name="age_rating_default">18+</string>

    <string name="fragment_movies_chosen_text">You chose: %1$s</string>

    <string name="error_movies_mesage_Api">Error loading movies data from Api</string>
    <string name="error_movies_mesage_Db">Error loading movies data from DataBase</string>

    <string name="error_actors_mesage_Api">Error loading actors data from Api</string>
    <string name="error_actors_mesage_Db">Error loading actors data from DataBase</string>

    <string name="work_completed">doWork() completed...</string>
    <string name="do_work_actors_network">doWork() NetworkMoviesLoading...</string>

    <string name="chanel_movie_top">Movie top rating</string>
    <string name="chanel_movie_top_description">Movie with top rating</string>

</resources>
