<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:background="@color/blackground"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">


        <ImageView
            android:id="@+id/iv_orig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/mask_background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:drawablePadding="@dimen/padding_8"
            android:paddingStart="@dimen/padding_8"
            android:paddingTop="@dimen/padding_8"
            android:paddingBottom="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_20"
            android:text="@string/back"
            android:textColor="@color/white_50"
            android:textSize="@dimen/normal_text"
            app:drawableLeftCompat="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_orig" />

        <TextView
            android:id="@+id/tv_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rectangle"
            android:padding="4dp"
            android:text="@string/pg_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintBottom_toTopOf="@+id/tv_namef"
            app:layout_constraintStart_toStartOf="@+id/iv_orig" />

        <TextView
            android:id="@+id/tv_namef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/max_text"
            app:layout_constraintBottom_toBottomOf="@+id/iv_orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_orig" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/tag_text"
            android:textColor="@color/red"
            android:textSize="@dimen/head_text"
            app:layout_constraintBottom_toTopOf="@+id/tv_reviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_namef" />


        <ImageView
            android:id="@+id/iv_star2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star1"
            app:layout_constraintEnd_toStartOf="@+id/iv_star3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_star1"
            app:layout_constraintTop_toTopOf="@+id/iv_star1"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_star_red" />

        <ImageView
            android:id="@+id/iv_star1"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_star2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag"
            app:srcCompat="@drawable/ic_star_red" />

        <ImageView
            android:id="@+id/iv_star3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star2"
            app:layout_constraintEnd_toStartOf="@+id/iv_star4"
            app:layout_constraintStart_toEndOf="@+id/iv_star2"
            app:layout_constraintTop_toTopOf="@+id/iv_star2"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_star_red" />

        <ImageView
            android:id="@+id/iv_star4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star3"
            app:layout_constraintEnd_toStartOf="@+id/iv_star5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_star3"
            app:layout_constraintTop_toTopOf="@+id/iv_star3"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_star_red" />

        <ImageView
            android:id="@+id/iv_star5"
            android:layout_width="8dp"
            android:layout_height="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star4"
            app:layout_constraintEnd_toStartOf="@+id/tv_reviews"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_star4"
            app:layout_constraintTop_toTopOf="@+id/iv_star4"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_star_grey" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:text="@string/reviews"
            android:textColor="@color/white_50"
            android:textSize="@dimen/head_text"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star5"
            app:layout_constraintStart_toEndOf="@+id/iv_star5"
            app:layout_constraintTop_toTopOf="@+id/iv_star5"
            app:layout_constraintVertical_bias="0.53" />


        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/storyline_name"
            android:textColor="@color/white"
            android:textSize="@dimen/head_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_storylinetxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

        <TextView
            android:id="@+id/tv_storylinetxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/storylinetxt"
            android:textColor="@color/white_75"
            android:textSize="@dimen/head_text"
            app:layout_constraintBottom_toTopOf="@+id/tv_cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline" />

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/head_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storylinetxt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cast" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>